# minidb

./: .gitignore  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_REFACTORING.md  BUILD_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CLI_FIX_SUMMARY.md  CMakeLists.txt  COMPLETE_BUILD_GUIDE.md  DEVELOPER_GUIDE.md  FINAL_CLEANUP_REPORT.md  GIT_SETUP_GUIDE.md  HISTORY_FEATURE_SUMMARY.md  INITIAL_COMMIT_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  TEST_REPORT.md  test_where_clause_fix.sh  test_where_verification.sh  verify_user_issue.sh
data_test/: db.meta.json
data_test/ORDERS/: schema.json
data_test/USERS/: schema.json
data_test_final/: db.meta.json
data_test_final/T2/: schema.json
data_test_join/: db.meta.json
data_test_join/T1/: schema.json
data_test_new/: db.meta.json
doc/: JOIN_DESIGN.md  JOIN_TODO_LIST.md  prompt.txt  requirements.txt
docs/: TYPED_EXPRESSION_SYSTEM.md
include/client/: cli_client.h  command_history.h
include/common/: config.h  crash_handler.h  status.h  types.h  utils.h
include/exec/: operator.h
include/exec/executor/: executor.h  new_executor.h
include/exec/operators/: filter_operator.h  final_result_operator.h  nested_loop_join_operator.h  projection_operator.h  scan_operator.h
include/exec/plan/: plan.h  planner.h
include/log/: logger.h
include/mem/: allocator.h  arena.h
include/net/: tcp_client.h  tcp_server.h
include/server/: database_server.h
include/sql/ast/: ast.h  ast_node.h  statements.h
include/sql/compiler/: compiler.h  statement.h
include/sql/optimizer/: optimizer.h
include/sql/parser/: new_parser.h  parser.h  tokenizer.h
include/storage/: catalog.h  table.h
scripts/: build.sh  build_verification.sh  cleanup_temp_files.sh  demo_complete_system.sh  demo_crash_handling.sh  demo_history_feature.sh  final_test_suite.sh  run_all_tests.sh  verify_cli_fix.sh
src/client/: cli_client.cpp  command_history.cpp  main.cpp
src/common/: crash_handler.cpp  status.cpp  types.cpp  value.cpp  value.h
src/exec/: operator.cpp
src/exec/executor/: executor.cpp  new_executor.cpp
src/exec/operators/: filter_operator.cpp  final_result_operator.cpp  nested_loop_join_operator.cpp  projection_operator.cpp  scan_operator.cpp  typed_expression_evaluator.cpp  typed_expression_evaluator.h
src/exec/plan/: plan.cpp  planner.cpp
src/log/: logger.cpp
src/mem/: allocator.cpp  arena.cpp
src/net/: tcp_client.cpp  tcp_server.cpp
src/server/: database_server.cpp  main.cpp
src/sql/ast/: ast.cpp  ast_node.cpp  statements.cpp
src/sql/compiler/: compiler.cpp  statement.cpp
src/sql/optimizer/: optimizer.cpp
src/sql/parser/: new_parser.cpp  parser.cpp  tokenizer.cpp
src/storage/: catalog.cpp  table.cpp
tests/integration/: test_arithmetic_join.cpp  test_e2e_basic.cpp  test_full_system.cpp  test_join_e2e.cpp
tests/minitest/: README.md  run_all.sh
tests/minitest/ref/basic/: create_table.ref
tests/minitest/ref/join/: join_arithmetic.ref  many_table_join.ref  simple_join.ref
tests/minitest/src/basic/: create_table.sql  insert.sql  select.sql
tests/minitest/src/join/: join_arithmetic.sql  many_table_join.sql  simple_join.sql
tests/unit/: test_arena.cpp  test_cli_client.cpp  test_cli_client_simple.cpp  test_command_history.cpp  test_crash_handler_extended.cpp  test_executor.cpp  test_logger.cpp  test_operators.cpp  test_parser.cpp  test_parser_extended.cpp  test_types.cpp  test_where_clause.cpp  test_where_simple.cpp
tests/unit/common/: test_crash_handler.cpp
tests/unit/exec/executor/: test_executor.cpp  test_expression_eval.cpp
tests/unit/exec/operators/: test_operators.cpp
tests/unit/exec/plan/: test_planner_ddl.cpp  test_planner_dml.cpp
tests/unit/memory/: test_allocator.cpp
tests/unit/net/: test_network.cpp  test_network_simple.cpp
tests/unit/sql/compiler/: test_compiler_ddl.cpp  test_compiler_dml.cpp  test_compiler_join.cpp  test_compiler_semantic.cpp  test_expression_clone.cpp
tests/unit/sql/optimizer/: test_optimizer.cpp
tests/unit/sql/parser/: test_parser.cpp  test_parser_ddl.cpp  test_parser_dml.cpp  test_parser_expressions.cpp  test_parser_join.cpp  test_tokenizer.cpp
tests/unit/storage/: test_storage.cpp  test_storage_simple.cpp
tools/minitest/: minitest.cpp
